2009-03-13  Adam Bergkvist <adam.bergkvist@ericsson.com>

Reviewed by Alexey Proskuryakov.

        https://bugs.webkit.org/show_bug.cgi?id=3547
        XMLHttpRequest.statusText returns always "OK"

        Covered by existing tests (which now pass on all platforms but Mac).

        * xml/XMLHttpRequest.cpp:
        (WebCore::XMLHttpRequest::statusText): Return ResourceResponse status text. It is now up
        to each platform to correctly set the status text or set it to "OK" to retain current
        behavior.



Canonical link: https://commits.webkit.org/33724@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@41665 268f45cc-cd09-0410-ab3c-d52691b4dbfc